[package]
name = "pingme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "^1.0", features=["derive"]}
serde_json = "*"
toml = "^0.8"
tokio = {version = "^1", features=["full"]}
anyhow = "*"
thiserror = "*"
reqwest = {version = "^0.12", features=["json", "multipart"]}
clap = {verison = "^4", features=["derive"]}